tests/vendor/valid/simple/else.c
//expect 2
//tags: simple, if
int main() {
    int a = 0;
    if (a)
        return 1;
    else
        return 2;
}