tests/vendor/invalid/semantics/break_not_in_loop.c
//tags: simple, loop
int main() {
    if (1)
        break;
}